# Expense_tracker_mcp

./: api_client.py  auth.py  config.py  db.py  fastmcp.json  main.py  mcp_server.py  pyproject.toml  requirements.txt  session.json  session.py
schemas/: expense.py
tools/: auth_tools.py  expenses.py  expenses2.py  utils.py
